added image to header and resolved issue with htmlFor

--- a/learning-audit-app/app/components/Header/Header.module.css
+++ b/learning-audit-app/app/components/Header/Header.module.css
@@ -1,9 +1,17 @@
 .siteHeader {
-    background-color: lightcyan;
-    justify-content: center;
-    align-items: center;
-    font-size: 3em;
-    letter-spacing: 0.1em;
-    border-top-left-radius: 0.25em;
-    border-top-right-radius: 0.25em;
+  display: flex;
+  height: 4rem;
+  background-color: rgb(134, 226, 226);
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  letter-spacing: 0.3rem;
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
+  }
+
+  .siteHeaderImage {
+    height: 2rem;
+    width: auto;
+    margin-left: 1rem;
   }
