--- a/learning-audit-app/app/globals.css
+++ b/learning-audit-app/app/globals.css
@@ -1,7 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
+
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-size: 10px;
+  font-family: "Merriweather", serif;
 }
 
 html,
