--- a/learning-audit-app/app/components/FormsSections/FormsSection.module.css
+++ b/learning-audit-app/app/components/FormsSections/FormsSection.module.css
@@ -2,7 +2,7 @@
     display: flex;
     background-color: lightgray;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     border-radius: 0.5rem;
   }
