--- a/learning-audit-app/app/components/ModuleList/ModuleList.module.css
+++ b/learning-audit-app/app/components/ModuleList/ModuleList.module.css
@@ -1,5 +1,4 @@
 .display {
-
     background-color: white;
     padding: 2rem;
     margin-top: 1.5rem;
@@ -7,5 +6,18 @@
   }
 
   .uList {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
     list-style: none;
+  }
+
+  .uListItem {
+    width: 40%;
+  }
+
+  .button {
+    border: none;
+    width: 100%;
+    height: 8rem;
   }
