--- a/learning-audit-app/app/components/ModuleList/ModuleList.module.css
+++ b/learning-audit-app/app/components/ModuleList/ModuleList.module.css
@@ -8,17 +8,27 @@
   .uList {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    column-gap: 0.5rem;
-    row-gap: 0.5rem;
+    column-gap: 1rem;
+    row-gap: 1rem;
     list-style: none;
   }
 
   .uListItem {
     width: 100%;
+    
   }
 
   .button {
     border: none;
     width: 100%;
     height: 8rem;
+    border-radius: 0.5rem;
+    color: #001524;
+    background-color: #ff7d00;
+    box-shadow:  0.5rem 0.25rem 0.25rem black;
+  }
+
+  .button:hover {
+    background-color: #78290f;
+    color: #ff7d00;
   }
