--- a/app/components/Modal/Modal.module.css
+++ b/app/components/Modal/Modal.module.css
@@ -1,9 +1,13 @@
 .modal_content {
     position: fixed;
-    top: 1rem;
-    left: 1rem;
-    translate: (50%, 50%);
+    top: 4rem;
+    bottom: 4rem;
+    left: 50%;
+    transform: translate(-50%, 0);
     background-color: white;
+    max-width: 500px;
+    min-width: 350px;
+    padding: 3rem;
 }
 
 .overlay {
@@ -12,4 +16,5 @@
     left: 0;
     bottom: 0;
     right: 0;
+    background-color: rgba(255, 255, 255, 0.3);
 }
