--- a/app/components/Modal/Modal.module.css
+++ b/app/components/Modal/Modal.module.css
@@ -4,10 +4,11 @@
     bottom: 4rem;
     left: 50%;
     transform: translate(-50%, 0);
-    background-color: white;
+    background-color: #001524;
+    color: white;
     max-width: 500px;
     min-width: 350px;
-    padding: 3rem;
+    border-radius: 0.5rem;
 }
 
 .overlay {
@@ -16,5 +17,25 @@
     left: 0;
     bottom: 0;
     right: 0;
-    background-color: rgba(255, 255, 255, 0.3);
+    background-color: rgba(255, 255, 255, 0.7);
+}
+
+.header {
+    display: flex;
+    height: 6rem;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 1.5rem;
+    padding: 0 3rem;
+    background-color: #15616d;
+}
+
+.button {
+    height: 3rem;
+    width: 3rem;
+    font-size: 1.5rem;
+}
+
+.main {
+    padding: 3rem;
 }
