--- a/app/components/FormsSections/NewForm.module.css
+++ b/app/components/FormsSections/NewForm.module.css
@@ -1,6 +1,8 @@
 .wide {
     width: 100%;
-    padding: 2rem;
+    padding: 1.5rem;
+    border-radius: 0.5rem;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   }
 
   .siteForm {
@@ -14,6 +16,17 @@
   }
 
   .formInput {
-    width: 100%
+    width: 100%;
+    padding: 0.5rem;
+  }
+
+  .button {
+    width: 100%;
+    padding: 0.5rem;
+    background-color: #001524;
+    color: white;
+    border: none;
+    border-radius: 0.5rem;
+    cursor: pointer;
   }
   
