--- a/app/globals.css
+++ b/app/globals.css
@@ -10,15 +10,16 @@
 
 html,
 body {
-  max-width: 100vw;
+  max-width: 100dvw;
   overflow-x: hidden;
-  background-color: #001524;
+  background-color: #f0f0f0;
 }
 
 .wrapper {
   grid-template-rows: 8em 1fr;
-  height: 100dvh;
-  width: 80%;
-  margin: auto;
-  padding: 1.5rem 0;
+  width: 90%;
+  margin: 1.5rem auto;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  border-radius: 0.5rem;
+  /* padding: 1.5rem 0; */
 }
