--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap");
 
 * {
   box-sizing: border-box;
@@ -16,8 +16,9 @@ body {
 }
 
 .wrapper {
-  grid-template-rows: 8em 1fr;
+  grid-template-rows: 8rem 1fr;
   width: 90%;
+  min-height: 90dvh;
   margin: 1.5rem auto;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   border-radius: 0.5rem;
