--- a/app/routes/auth/page.module.css
+++ b/app/routes/auth/page.module.css
@@ -4,6 +4,11 @@
   border-radius: 0.5rem;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   margin: 1rem auto;
+
+  h2 {
+    font-size: 1.25rem;
+    text-align: center;
+  }
 }
 
 .form {
