--- a/app/routes/dashboard/page.module.css
+++ b/app/routes/dashboard/page.module.css
@@ -6,6 +6,11 @@
     "learnings modules modules";
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
+  height: 100%;
+  padding: 1rem;
+  background-color: #fff;
+  border-bottom-left-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
 }
 
 .info {
