--- a/app/routes/dashboard/page.module.css
+++ b/app/routes/dashboard/page.module.css
@@ -16,6 +16,14 @@
 .info {
   grid-area: info;
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+
+  & button {
+    padding: 0.25rem 0.5rem;
+  }
 }
 
 .learnings {
