update styles to show border between grid items

--- a/app/routes/dashboard/page.module.css
+++ b/app/routes/dashboard/page.module.css
@@ -8,9 +8,11 @@
   grid-template-rows: 1fr 1fr 1fr;
   height: 100%;
   padding: 1rem;
-  background-color: #fff;
+  background-color: #000;
   border-bottom-left-radius: 0.5rem;
   border-bottom-right-radius: 0.5rem;
+  gap: 1px;
+  text-align: center;
 }
 
 .info {
@@ -20,6 +22,7 @@
   align-items: center;
   justify-content: center;
   gap: 0.5rem;
+  background-color: #fff;
 
   & button {
     padding: 0.25rem 0.5rem;
@@ -28,8 +31,12 @@
 
 .learnings {
   grid-area: learnings;
+  background-color: #fff;
+  padding: 1rem;
 }
 
 .modules {
   grid-area: modules;
+  background-color: #fff;
+  padding: 1rem;
 }
