--- a/app/routes/auth/page.module.css
+++ b/app/routes/auth/page.module.css
@@ -1,5 +1,6 @@
 .container {
   max-width: 500px;
+  height: fit-content;
   padding: 1.5rem;
   border-radius: 0.5rem;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
