--- a/app/globals.css
+++ b/app/globals.css
@@ -35,8 +35,10 @@ h3 {
 }
 
 button {
-  padding: 0.25rem 1rem;
+  padding: 0.5rem 1.5rem;
   font-weight: bold;
+  border-radius: 0.25rem;
+  border: 1px solid;
 }
 
 .wrapper {
