move landing page to the root and update header to link to the landing page and remove old link to lp

--- a/app/components/Header/Header.module.css
+++ b/app/components/Header/Header.module.css
@@ -9,6 +9,12 @@
   color: #ffecd1;
 }
 
+.headerLink {
+  text-decoration: none;
+  color: inherit;
+  display: block;
+}
+
 .logoTitle {
   display: flex;
   align-items: center;
