--- a/app/components/Header/Header.module.css
+++ b/app/components/Header/Header.module.css
@@ -37,6 +37,7 @@
   gap: 1rem;
   margin-right: 2rem;
   list-style: none;
+  align-items: center;
 }
 
 .navLink {
@@ -44,4 +45,13 @@
   font-size: 1.25rem;
   letter-spacing: 0.2rem;
   color: inherit;
+  padding: 0.5rem 1rem;
+  border-radius: 0.25rem;
+  border: 1px solid transparent;
+  transition: border 0.2s ease-in;
+  cursor: pointer;
+}
+
+.navLink:hover {
+  border: 1px solid #ffecd1;
 }
