--- a/app/components/Modal/Modal.module.css
+++ b/app/components/Modal/Modal.module.css
@@ -16,10 +16,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-.modal button {
-  margin-top: 1rem;
+  gap: 1rem;
 }
 
 .modal::backdrop {
