--- a/app/components/FormsSections/NewForm.module.css
+++ b/app/components/FormsSections/NewForm.module.css
@@ -9,16 +9,15 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-}
-
-.formLabel {
-  margin-bottom: 1rem;
+  gap: 1rem;
 }
 
 .formInput {
   width: 100%;
   padding: 0.5rem;
   margin-top: 0.5rem;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  border-radius: 0.25rem;
 }
 
 .button {
