--- a/app/routes/dashboard/page.module.css
+++ b/app/routes/dashboard/page.module.css
@@ -7,10 +7,7 @@
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
   height: 100%;
-  padding: 1rem;
   background-color: #000;
-  border-bottom-left-radius: 0.5rem;
-  border-bottom-right-radius: 0.5rem;
   gap: 2px;
   text-align: center;
 }
@@ -34,5 +31,8 @@
 .modules {
   grid-area: modules;
   background-color: #fff;
-  padding: 1rem;
+  padding: 1rem 0;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
