--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,7 +1,14 @@
 .container {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  padding: 1rem;
+  container-type: inline-size;
+  container-name: landing-layout;
+  height: 100%;
+  align-content: center;
+}
+
+.containerContent {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .heroMessage {
@@ -11,10 +18,11 @@
   justify-content: center;
   text-align: center;
   gap: 2rem;
+  padding: 1rem;
 }
 
 .heroMessage h1 {
-  font-size: 5rem;
+  font-size: 2.5rem;
   letter-spacing: 0.25rem;
 }
 
@@ -34,6 +42,40 @@
 
 .heroImg {
   margin: 0 auto;
-  width: auto;
-  height: 70%;
+  width: 70%;
+  height: auto;
+}
+
+@container landing-layout (min-width: 1025px) {
+  .containerContent {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 1rem;
+  }
+
+  .heroMessage h1 {
+    font-size: 5rem;
+    letter-spacing: 0.25rem;
+  }
+
+  .heroMessage p {
+    font-size: 1.25rem;
+  }
+
+  .heroMessage button {
+    font-size: 1.5rem;
+  }
+
+  .heroImgContainer {
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    width: 100%;
+  }
+
+  .heroImg {
+    margin: 0 auto;
+    width: 90%;
+    height: auto;
+  }
 }
