--- a/app/routes/dashboard/page.module.css
+++ b/app/routes/dashboard/page.module.css
@@ -1,12 +1,11 @@
 .container {
-  display: grid;
-  grid-template-areas:
-    "info modules modules"
-    "learnings modules modules"
-    "learnings modules modules";
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  height: 100%;
+  container-type: inline-size;
+  container-name: dashboard;
+}
+
+.containerContent {
+  display: flex;
+  flex-direction: column;
   background-color: #000;
   gap: 2px;
   text-align: center;
@@ -20,6 +19,7 @@
   justify-content: center;
   gap: 0.5rem;
   background-color: #fff;
+  padding: 1rem;
 }
 
 .learnings {
@@ -35,4 +35,17 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+}
+
+@container dashboard (min-width: 768px) {
+  .containerContent {
+    display: grid;
+    grid-template-areas:
+      "info modules modules"
+      "learnings modules modules"
+      "learnings modules modules";
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    height: 100%;
+  }
 }
