--- a/app/globals.css
+++ b/app/globals.css
@@ -44,7 +44,7 @@ button {
 
 .wrapper {
   display: grid;
-  grid-template-rows: 8rem 1fr;
+  grid-template-rows: auto 1fr;
   width: 100%;
   height: 100dvh;
 }
