--- a/app/components/ModuleList/ModuleList.module.css
+++ b/app/components/ModuleList/ModuleList.module.css
@@ -1,3 +1,8 @@
+.container {
+  container-type: inline-size;
+  container-name: module-list;
+}
+
 .display {
   display: flex;
   flex-direction: column;
@@ -8,30 +13,39 @@
 }
 
 .uList {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  column-gap: 1rem;
-  row-gap: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5rem;
+  justify-content: center;
   list-style: none;
-}
-
-.uListItem {
-  width: 100%;
 }
 
 .button {
   border: none;
-  width: 100%;
-  height: 4rem;
+  min-width: 150px;
   border-radius: 0.5rem;
   color: #001524;
   background-color: #ff7d00;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
   transition: background-color 0.2s ease-in-out;
-  padding: 0.25rem;
+  padding: 0.5rem;
 }
 
 .button:hover {
   background-color: #78290f;
   color: #ff7d00;
+}
+
+@container module-list (min-width: 500px) {
+  .uList {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 1rem;
+    row-gap: 1rem;
+  }
+
+  .button {
+    height: 4rem;
+    width: 100%;
+  }
 }
