--- a/app/routes/auth/page.module.css
+++ b/app/routes/auth/page.module.css
@@ -34,6 +34,12 @@
   background-color: darkgrey;
 }
 
+.spinner {
+  height: 1rem;
+  width: 1rem;
+  margin: 0 auto;
+}
+
 .input {
   display: flex;
   flex-direction: column;
