--- a/app/components/FormsSections/NewForm.module.css
+++ b/app/components/FormsSections/NewForm.module.css
@@ -23,6 +23,13 @@
   border-radius: 0.25rem;
 }
 
+.successMessage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+
 .button {
   width: 75%;
   padding: 0.5rem;
