--- a/app/globals.css
+++ b/app/globals.css
@@ -34,6 +34,12 @@ h3 {
   font-weight: 800;
 }
 
+.container {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
 button {
   padding: 0.5rem 1.5rem;
   font-weight: bold;
